--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,33 @@
 @import "tailwindcss"
+
+/* Light Blue Theme
+068D9D
+53599A
+6D9DC5
+80DED9
+AEECEF
+ */
+
+/* Dark Blue Theme
+045962
+393D6A
+4680AF
+4DD1CA
+88E3E7 
+ */
+
+/*Light Green Theme
+D6D98F
+9AB659
+AB923E
+756933
+491D31
+*/
+
+/*Dark Green Theme
+C2C658
+768E3E
+78662B
+78662B
+2B121E
+*/
