--- a/frontend/src/components/views/monthView/MonthView.css
+++ b/frontend/src/components/views/monthView/MonthView.css
@@ -45,7 +45,7 @@
   width: 100%;
   height: 100%;
   clip-path: inherit;
-  background-color: var(--primary, #FFD700);
+  background-color: var(--color-accent);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,8 +61,18 @@
 }
 
 .hex-outer.today {
-  border-color: black;
+  border-color: var(--color-accent) !important;
   border-width: 3px;
+  transform: scale(1.05);
+
+}
+
+.hex-outer.today .hex-inner {
+  background-color: var(--color-primary) !important;
+  color: var(--neutral-content) !important;
+  font-weight: bold;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: scale(1.05);
 }
 
 .honey-row.offset {
@@ -96,4 +106,31 @@
     margin-right: -7px;
     font-size: 0.85rem;
   }
+}
+
+.border-neutral {
+  border-color: var(--color-primary) !important;
+}
+
+.grid-view .today {
+  border: 0.5px solid var(--color-secondary) !important;
+  background-color: var(--color-accent) !important;
+  color: var(--color-accent-content) !important;
+  transform: scale(1.1);
+  z-index: 10;
+  position: relative;
+}
+
+.hex-outer.weekend .hex-inner {
+  background-color: var(--color-secondary) !important;
+  color: var(--secondary-content) !important;
+}
+
+.hex-outer.weekend {
+  border-color: var(--color-secondary) !important;
+}
+
+.hex-outer.today.weekend .hex-inner {
+  background-color: var(--color-accent) !important;
+  color: var(--accent-content) !important;
 }
