css contact lists fixed + some rendering logic

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,6 +33,7 @@
 
   --color-info: #3ABFF8;
   --color-success: #36D399;
+  --color-success-content: #e5e5e5;
   --color-warning: #fbbd23;
   --color-error: #B91C1C;
   --color-error-content: #ffffff;
@@ -93,6 +94,7 @@
 
   --color-info: #80DED9;   /* aqua mint */
   --color-success: #AEECEF; /* pale cyan */
+  --color-success-content: #53599A;
   --color-warning: #fbbd23;
   --color-error: #F87272;
 }
@@ -121,7 +123,8 @@
   --color-base-content: #1a1a1a;
 
   --color-info: #6cb2eb;
-  --color-success: #36D399;
+  --color-success: #ffc300;
+  --color-success-content: #E11D48;
   --color-warning: #ffc300; /* mikado-yellow */
   --color-error: #E11D48;       /* deep rose red */
   --color-error-content: #ffffff;
