--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,29 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: 'MyCustomFont';
+  font-family: 'CubaoRegular';
   src: url('/src/fonts/Cubao_Free_Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CubaoNarrow';
+  src: url('/src/fonts/Cubao_Free_Narrow.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@layer base {
+  .font-cubao {
+    font-family: 'CubaoRegular', ui-sans-serif, system-ui, sans-serif !important;
+  }
+  
+  .font-cubaoNarrow {
+    font-family: 'CubaoNarrow', ui-sans-serif, system-ui, sans-serif !important;
+  }
 }
 
 @plugin "daisyui";
